<resources>

    <string name="app_name">UBandCoach</string>

    <!-- Standard Buttons -->
    <string name="btn_send">SEND</string>
    <string name="btn_cancel">CANCEL</string>

    <!-- Miscellaneous -->
    <string name="loading">Loading…</string>

    <!-- SplashActivity -->
    <string name="splash_copyright">Copyright © 2015 Hunabsys. All rights reserved.</string>

    <!-- LoginActivity -->
    <string name="login_internal">Login</string>
    <string name="login_fb">Login with</string>
    <string name="login_register">Register</string>

    <!-- RegistrationActivity-->
    <string name="title_activity_registration">REGISTRATION</string>
    <string name="registration_user_name">User Name</string>
    <string name="registration_email">E-mail</string>
    <string name="registration_pass">Password</string>
    <string name="registration_confirm_pass">Confirm Password</string>
    <string name="registration_dialog_title">SUCCESSFUL REGISTRATION</string>
    <string name="registration_dialog_message_success">The user was successfully registered!</string>

</resources>
