<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <requestFocus />

    <!-- MAIN Content View -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_layout"
        android:orientation="vertical"
        tools:context="com.hunabsys.ubandapp.view.activities.RegistrationActivity">

        <RelativeLayout
            android:id="@+id/registration_navbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/background_navbar"
            android:paddingBottom="0dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/registration_txv_navbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_centerInParent="true"
                android:text="@string/title_activity_registration"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/font_titles"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/registration_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/registration_buttons"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/registration_navbar"
            android:layout_marginLeft="0dp"
            android:background="@mipmap/background_registration"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/registration_fields"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:id="@+id/textView98"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/registration_user_name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/font_titles" />

                    <EditText
                        android:id="@+id/registration_edtx_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="10"
                        android:background="@drawable/text_field_shape_transparent"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/text_fields_hint"
                        android:inputType="textPersonName"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/font_active_text"
                        android:textColorHint="@color/font_inactive_text"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:id="@+id/textView99"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/registration_email"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/font_titles" />

                    <EditText
                        android:id="@+id/registration_edtx_email"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="10"
                        android:background="@drawable/text_field_shape_transparent"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/text_fields_hint"
                        android:inputType="textWebEmailAddress"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/font_active_text"
                        android:textColorHint="@color/font_inactive_text"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:id="@+id/textView100"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/registration_pass"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/font_titles" />

                    <EditText
                        android:id="@+id/registration_edtx_pass"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="10"
                        android:background="@drawable/text_field_shape_transparent"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/text_fields_hint"
                        android:inputType="textWebPassword"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/font_active_text"
                        android:textColorHint="@color/font_inactive_text"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:id="@+id/textView101"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/registration_confirm_pass"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/font_titles" />

                    <EditText
                        android:id="@+id/registration_edtx_confirm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="10"
                        android:background="@drawable/text_field_shape_transparent"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/text_fields_hint"
                        android:inputType="textWebPassword"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/font_active_text"
                        android:textColorHint="@color/font_inactive_text"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/registration_buttons"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/registration_btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector_sign_up"
                    android:text="@android:string/cancel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/font_active_text"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/registration_btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector_sign_up"
                    android:text="@string/btn_sign_up"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/font_active_text"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <!-- LoadingDialog -->
        <include
            android:id="@+id/loading_dialog"
            layout="@layout/dialog_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
